网站结构框架完成

--- a/index.html
+++ b/index.html
@@ -3,8 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>麦子商城</title>
+    <link rel="stylesheet" href="css/index.css">
+
 </head>
 <body>
+<div id="container">
+    <!--网站头部-->
+    <div id="pagetop"></div>
+    <!--网站主体-->
+    <div id="pagebody">
+        <!--主体左边-->
+        <div id="body-left"></div>
+        <!--主体左边-->
+        <div id="body-middle"></div>
+        <!--主体左边-->
+        <div id="body-right"></div>
 
+    </div>
+    <!--网站底部-->
+    <div id="pagefooter"></div>
+
+</div>
+
+
+<script src="js/jquery.js"></script>
 </body>
 </html>
