--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name=”renderer” content=”webkit”>
+    <meta http-equiv=”X-UA-Compatible” content=”IE=Edge,chrome=1″>
     <title>麦子商城</title>
     <link rel="stylesheet" href="css/index.css">
 
@@ -9,7 +11,73 @@
 <body>
 <div id="container">
     <!--网站头部-->
-    <div id="pagetop"></div>
+    <div id="pagetop">
+        <div class="logo">
+            <img src="img/logo.jpg" alt="logo">
+        </div>
+        <div class="welcomeinfo">
+            <span>您好，欢迎来到麦子商城！想继续购物？<a href="login.html">[请登录]</a>，新用户？<a href="register.html">[免费注册]</a></span>
+        </div>
+        <div class="topnav">
+            <ul class="navlist">
+                <li><a href="#">帮助中心</a>|</li>
+                <li><a href="#">客户反馈</a>|</li>
+                <li><a href="#">网站地图</a>|</li>
+                <li><a href="#">加入收藏</a></li>
+                <li>
+                    <time></time>
+                </li>
+            </ul>
+            <div class="marqueemsg">
+                <div id="con">
+                    <ul>
+                        <li>
+                            <img src="img/notice.gif" width="12" height="12"><a href="#">麦子商城升级，感谢用户的支持与信任！</a>
+                        </li>
+                        <li>
+                            <img src="img/notice.gif" width="12" height="12"><a href="#">这是另一条信息，用于测试测试测试测试！</a>
+                        </li>
+                        <li>
+                            <img src="img/notice.gif" width="12" height="12"><a href="#">还有另一条信息，用于测试测试测试测试！</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div id="nav">
+            <div class="nav-menu">
+                <ul>
+                    <li class="active"><a href="#">网站首页</a>|</li>
+                    <li><a href="#">分类导航</a>|</li>
+                    <li><a href="#">品牌导航</a>|</li>
+                    <li><a href="#">购物帮助</a>|</li>
+                    <li><a href="#">新闻资讯</a>|</li>
+                    <li><a href="#">报价单</a>|</li>
+                    <li><a href="#">发货单</a></li>
+                </ul>
+            </div>
+            <div class="nav-search">
+                <form action="#">
+                    <span>商品搜索: </span>
+                    <select name="category" id="category">
+                        <option value="all">所有分类</option>
+                        <option value="category1">分类一</option>
+                        <option value="category2">分类二</option>
+                    </select>
+                    <input type="text" name="key" id="key">
+                    <input type="submit" name="submit" value="搜索">
+                    <span class="search-way"><a href="#">高级</a>/<a href="#">组合</a>搜索</span>
+                </form>
+                <div class="cart-and-user">
+                    <span class="cart">购物车暂时为空</span>
+                    <span class="billing">去结算</span>
+                    <span class="user-center">用户中心</span>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
     <!--网站主体-->
     <div id="pagebody">
         <!--主体左边-->
@@ -26,6 +94,11 @@
 </div>
 
 
-<script src="js/jquery.js"></script>
+<!--jQuery-->
+<script type="text/javascript" src="js/jquery.js"></script>
+<!--jQuery动画暂停插件-->
+<script type="text/javascript" src="js/jquery.pause.min.js"></script>
+<!--滚动效果js-->
+<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
