首页主体中间部分完成

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv=”X-UA-Compatible” content=”IE=Edge,chrome=1″>
     <title>麦子商城</title>
     <link rel="stylesheet" href="css/index.css">
-
 </head>
 <body>
 <div id="container">
@@ -81,11 +80,282 @@
     <!--网站主体-->
     <div id="pagebody">
         <!--主体左边-->
-        <div id="body-left"></div>
+        <div id="body-left">
+            <div class="aside-box user-info">
+                <h3>用户信息</h3>
+                <ul>
+                    <li style="background: url('img/1.gif') no-repeat center left;"><a href="register.html">注册</a>/<a
+                            href="login.html">登录</a></li>
+                    <li style="background: url('img/8.gif') no-repeat center left;"><a href="#">购物车(0)</a></li>
+                    <li style="background: url('img/10.gif') no-repeat center left;"><a href="#">对比框(0)</a></li>
+                </ul>
+            </div>
+            <div class="aside-box product-category">
+                <h3>商品分类</h3>
+                <ul>
+                    <li>
+                        <h4><a href="#">家用电器</a></h4>
+                        <ul>
+                            <li><a href="#">大家电</a><a href="#">厨房电器</a></li>
+                            <li><a href="#">汽车用品</a><a href="#">个人护理</a></li>
+                            <li><a href="#">生活电器</a><a href="#">其他家电</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h4><a href="#">手机数码</a></h4>
+                        <ul>
+                            <li><a href="#">大家电</a><a href="#">厨房电器</a></li>
+                            <li><a href="#">汽车用品</a><a href="#">个人护理</a></li>
+                            <li><a href="#">生活电器</a><a href="#">其他家电</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h4><a href="#">电脑产品</a></h4>
+                        <ul>
+                            <li><a href="#">大家电</a><a href="#">厨房电器</a></li>
+                            <li><a href="#">汽车用品</a><a href="#">个人护理</a></li>
+                            <li><a href="#">生活电器</a><a href="#">其他家电</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h4><a href="#">日用百货</a></h4>
+                        <ul>
+                            <li><a href="#">大家电</a><a href="#">厨房电器</a></li>
+                            <li><a href="#">汽车用品</a><a href="#">个人护理</a></li>
+                            <li><a href="#">生活电器</a><a href="#">其他家电</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h4><a href="#">服装鞋帽</a></h4>
+                        <ul>
+                            <li><a href="#">大家电</a><a href="#">厨房电器</a></li>
+                            <li><a href="#">汽车用品</a><a href="#">个人护理</a></li>
+                            <li><a href="#">生活电器</a><a href="#">其他家电</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h4><a href="#">运动健康</a></h4>
+                        <ul>
+                            <li><a href="#">大家电</a><a href="#">厨房电器</a></li>
+                            <li><a href="#">汽车用品</a><a href="#">个人护理</a></li>
+                            <li><a href="#">生活电器</a><a href="#">其他家电</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="aside-box school-token">
+                <a href="#"><img src="img/left_01.gif" alt="校园令牌" width="195" height="83"></a>
+            </div>
+            <div class="aside-box recommend-brands">
+                <h3>推荐品牌</h3>
+                <ul>
+                    <li><a href="#"><img src="img/brand1.jpg" alt="brand1"></a></li>
+                    <li><a href="#"><img src="img/brand2.jpg" alt="brand2"></a></li>
+                    <li><a href="#"><img src="img/brand3.jpg" alt="brand3"></a></li>
+                    <li><a href="#"><img src="img/brand4.jpg" alt="brand4"></a></li>
+                    <li><a href="#"><img src="img/brand5.jpg" alt="brand5"></a></li>
+                    <li><a href="#"><img src="img/brand6.jpg" alt="brand6"></a></li>
+                    <p>所有品牌&gt;&gt;</p>
+                </ul>
+
+            </div>
+            <div class="aside-box school-token">
+                <a href="#"><img src="img/left_02.jpg" alt="校园令牌" width="195" height="83"></a>
+            </div>
+            <div class="aside-box partners">
+                <h3>合作伙伴</h3>
+                <ul>
+                    <li><a href="#">网软志成人才</a></li>
+                    <li><a href="#">网软志成商城</a></li>
+
+                </ul>
+
+            </div>
+
+        </div>
         <!--主体左边-->
-        <div id="body-middle"></div>
+        <div id="body-middle">
+            <!--轮播图-->
+            <div class="out">
+                <ul class="img">
+                    <li><a href="#"><img src="img/banner1.jpg" alt=""></a></li>
+                    <li><a href="#"><img src="img/banner2.jpg" alt=""></a></li>
+                    <li><a href="#"><img src="img/banner3.jpg" alt=""></a></li>
+                    <li><a href="#"><img src="img/banner4.jpg" alt=""></a></li>
+                    <li><a href="#"><img src="img/banner5.jpg" alt=""></a></li>
+                    <li><a href="#"><img src="img/banner6.jpg" alt=""></a></li>
+                </ul>
+                <ul class="num">
+                    <!--底部数字栏-->
+                </ul>
+                <div class="left btn"><</div>
+                <div class="right btn">></div>
+            </div>
+
+            <!--推荐商品-->
+            <div class="product-box recommend">
+                <h3>推荐商品<span>MORE</span></h3>
+
+                <ul>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题1商品标题1商品标题1商品标题1</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题2商品标题2</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题3商品标题2</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题4商品标题4</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题5商品标题2</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题6商品标题2</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题7商品标题2</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题8商品标题2</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题9商品标题2</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题10商品标题2</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                </ul>
+            </div>
+
+            <div class="product-box recommend">
+                <h3>热卖商品<span>MORE</span></h3>
+
+                <ul>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题1商品标题1商品标题1商品标题1</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题2商品标题2</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题3商品标题2</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题4商品标题4</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题5商品标题2</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+
+                </ul>
+            </div>
+            <div class="product-box recommend">
+                <h3>特价商品<span>MORE</span></h3>
+
+                <ul>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题1商品标题1商品标题1商品标题1</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题2商品标题2</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题3商品标题2</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题4商品标题4</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题5商品标题2</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+
+                </ul>
+            </div>
+            <div class="product-box"><img src="img/11.jpg" alt="联想" width="580" height="90"></div>
+            <div class="product-box recommend">
+                <h3>最新商品<span>MORE</span></h3>
+
+                <ul>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题1商品标题1商品标题1商品标题1</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题2商品标题2</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题3商品标题2</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题4商品标题4</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                        <p class="product-title">商品标题5商品标题2</p>
+                        <p class="product-price">￥1298.00元</p>
+                    </a></li>
+
+                </ul>
+            </div>
+            <div class="pay-way">
+                <p>本站支持以下支付方式</p>
+                <ul>
+                    <li><img src="img/logo_alipay.gif" alt="" width="100" height="33"></li>
+                    <li><img src="img/logo_cncard.gif" alt="" width="100" height="33"></li>
+                    <li><img src="img/logo_ebank.gif" alt="" width="100" height="33"></li>
+                    <li><img src="img/logo_paypal.gif" alt="" width="100" height="33"></li>
+                    <li><img src="img/logo_tenpay.gif" alt="" width="100" height="33"></li>
+                    <li><img src="img/logo_99bill.jpg" alt="" width="49" height="33"></li>
+                </ul>
+            </div>
+
+        </div>
         <!--主体左边-->
-        <div id="body-right"></div>
+        <div id="body-right">
+            <div class="aside-box user-info">
+                <h3>用户信息</h3>
+                <ul>
+                    <li style="background: url('img/1.gif') no-repeat center left;"><a href="register.html">注册</a>/<a
+                            href="login.html">登录</a></li>
+                    <li style="background: url('img/8.gif') no-repeat center left;"><a href="#">购物车(0)</a></li>
+                    <li style="background: url('img/10.gif') no-repeat center left;"><a href="#">对比框(0)</a></li>
+                </ul>
+            </div>
+            <div class="aside-box partners">
+                <h3>合作伙伴</h3>
+                <ul>
+                    <li><a href="#">网软志成人才</a></li>
+                    <li><a href="#">网软志成商城</a></li>
+
+                </ul>
+
+            </div>
+        </div>
 
     </div>
     <!--网站底部-->
@@ -100,5 +370,6 @@
 <script type="text/javascript" src="js/jquery.pause.min.js"></script>
 <!--滚动效果js-->
 <script type="text/javascript" src="js/index.js"></script>
+
 </body>
 </html>
