--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <option value="category1">分类一</option>
                         <option value="category2">分类二</option>
                     </select>
-                    <input type="text" name="key" id="key">
+                    <input type="text" name="key" id="key" placeholder="请输入你感兴趣的商品名称">
                     <input type="submit" name="submit" value="搜索">
                     <span class="search-way"><a href="#">高级</a>/<a href="#">组合</a>搜索</span>
                 </form>
@@ -335,31 +335,174 @@
             </div>
 
         </div>
-        <!--主体左边-->
+        <!--主体右边-->
         <div id="body-right">
-            <div class="aside-box user-info">
-                <h3>用户信息</h3>
+            <div class="aside-box website-news">
+                <h3>网站新闻</h3>
                 <ul>
-                    <li style="background: url('img/1.gif') no-repeat center left;"><a href="register.html">注册</a>/<a
-                            href="login.html">登录</a></li>
-                    <li style="background: url('img/8.gif') no-repeat center left;"><a href="#">购物车(0)</a></li>
-                    <li style="background: url('img/10.gif') no-repeat center left;"><a href="#">对比框(0)</a></li>
+                    <li><a href="#">麦子商城网站英文版</a></li>
+                    <li><a href="#">麦子商城英文版</a></li>
+                    <li><a href="#">麦子商城网站英文版</a></li>
+                    <li><a href="#">麦子商城网站</a></li>
+                    <li><a href="#">麦子商城网站英文版</a></li>
+                    <li><a href="#">麦子商城网站版</a></li>
+                    <li><a href="#">麦子英文版</a></li>
+                    <li><a href="#">麦子城网站英文版</a></li>
                 </ul>
             </div>
-            <div class="aside-box partners">
-                <h3>合作伙伴</h3>
+            <div class="aside-box customer-service">
+                <h3>客户服务</h3>
                 <ul>
-                    <li><a href="#">网软志成人才</a></li>
-                    <li><a href="#">网软志成商城</a></li>
+                    <li>电话:1234567889</li>
+                    <li>邮箱:hfh@163.com</li>
+                    <li>传真:53434534534</li>
+                    <li>
+                        <ul>
+                            <li style="background: url('img/gb_oicq.gif') no-repeat center left;"><a href="#">售前客服</a>
+                            </li>
+                            <li style="background: url('img/gb_oicq.gif') no-repeat center left;"><a href="#">售后客服</a>
+                            </li>
+                            <li style="background: url('img/ww.gif') no-repeat center left;"><a href="#">十佳掌柜</a></li>
+                            <li style="background: url('img/ww.gif') no-repeat center left;"><a href="#">网软志成</a></li>
+                            <li style="background: url('img/msn.gif') no-repeat center left;"><a href="#">MSN客服一</a>
+                            </li>
+                            <li style="background: url('img/msn.gif') no-repeat center left;"><a href="#">MSN客服二</a>
+                            </li>
+                            <li style="background: url('img/skype.gif') no-repeat center left;"><a href="#">网软志成</a>
+                            </li>
+                        </ul>
+                    </li>
 
                 </ul>
-
             </div>
+            <div class="aside-box category-recommend">
+                <h3>分类推荐商品</h3>
+                <ul>
+                    <li>
+                        <a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                            <div>
+                                <p class="product-title">商品标题5商品标题2商品标题5商品标题2商品题2商品</p>
+                                <p class="product-price">￥1298.00元</p>
+                            </div>
+
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                            <div>
+                                <p class="product-title">商品标题5商品标题2商品标题5商品标题2商品题2商品</p>
+                                <p class="product-price">￥1298.00元</p>
+                            </div>
+
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                            <div>
+                                <p class="product-title">商品标题5商品标题2商品标题5商品标题2商品题2商品</p>
+                                <p class="product-price">￥1298.00元</p>
+                            </div>
+
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                            <div>
+                                <p class="product-title">商品标题5商品标题2商品标题5商品标题2商品题2商品</p>
+                                <p class="product-price">￥1298.00元</p>
+                            </div>
+
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                            <div>
+                                <p class="product-title">商品标题5商品标题2商品标题5商品标题2商品题2商品</p>
+                                <p class="product-price">￥1298.00元</p>
+                            </div>
+
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="img/product1.jpg" alt="" width="110" height="85">
+                            <div>
+                                <p class="product-title">商品标题5商品标题2商品标题5商品标题2商品题2商品</p>
+                                <p class="product-price">￥1298.00元</p>
+                            </div>
+
+                        </a>
+                    </li>
+
+                </ul>
+            </div>
+            <div class="aside-box activity">
+                <img src="img/right_01.jpg" alt="" width="195" height="166">
+            </div>
+
         </div>
 
     </div>
     <!--网站底部-->
-    <div id="pagefooter"></div>
+    <div class="clearfix"></div>
+
+    <div id="pagefooter">
+        <div class="footer-nav">
+            <ul>
+                <li>
+                    <h6>关于我们</h6>
+                    <ul>
+                        <li><a href="#">发展历程</a></li>
+                        <li><a href="#">发展历程</a></li>
+                        <li><a href="#">发展历程</a></li>
+                        <li><a href="#">发展历程</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <h6>关于我们</h6>
+                    <ul>
+                        <li><a href="#">发展历程</a></li>
+                        <li><a href="#">发展历程</a></li>
+                        <li><a href="#">发展历程</a></li>
+                        <li><a href="#">发展历程</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <h6>关于我们</h6>
+                    <ul>
+                        <li><a href="#">发展历程</a></li>
+                        <li><a href="#">发展历程</a></li>
+                        <li><a href="#">发展历程</a></li>
+                        <li><a href="#">发展历程</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <h6>关于我们</h6>
+                    <ul>
+                        <li><a href="#">发展历程</a></li>
+                        <li><a href="#">发展历程</a></li>
+                        <li><a href="#">发展历程</a></li>
+                        <li><a href="#">发展历程</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <h6>关于我们</h6>
+                    <ul>
+                        <li><a href="#">发展历程</a></li>
+                        <li><a href="#">发展历程</a></li>
+                        <li><a href="#">发展历程</a></li>
+                        <li><a href="#">发展历程</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="footer-info">
+            <div><span>淘宝店</span><span>淘宝店</span><span>淘宝店</span></div>
+            <div><p>这是一个很长很长的版权声明这是一个很长很长的版权声明这是一个很长很长的版权声明</p></div>
+            <div><p>客服热线:45345234534 传真:79348759034</p></div>
+            <div><p>客服邮箱:642833@13.com</p></div>
+        </div>
+
+    </div>
 
 </div>
 
