产品列表及详细页面完成

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name=”renderer” content=”webkit”>
     <meta http-equiv=”X-UA-Compatible” content=”IE=Edge,chrome=1″>
     <title>麦子商城</title>
+    <link rel="stylesheet" href="css/basic.css">
     <link rel="stylesheet" href="css/index.css">
+
 </head>
 <body>
 <div id="container">
@@ -173,7 +175,7 @@
             </div>
 
         </div>
-        <!--主体左边-->
+        <!--主体中间-->
         <div id="body-middle">
             <!--轮播图-->
             <div class="out">
@@ -240,7 +242,7 @@
                 </ul>
             </div>
 
-            <div class="product-box recommend">
+            <div class="product-box hot">
                 <h3>热卖商品<span>MORE</span></h3>
 
                 <ul>
@@ -267,7 +269,7 @@
 
                 </ul>
             </div>
-            <div class="product-box recommend">
+            <div class="product-box special-offer">
                 <h3>特价商品<span>MORE</span></h3>
 
                 <ul>
@@ -295,7 +297,7 @@
                 </ul>
             </div>
             <div class="product-box"><img src="img/11.jpg" alt="联想" width="580" height="90"></div>
-            <div class="product-box recommend">
+            <div class="product-box latest-product">
                 <h3>最新商品<span>MORE</span></h3>
 
                 <ul>
@@ -511,7 +513,7 @@
 <script type="text/javascript" src="js/jquery.js"></script>
 <!--jQuery动画暂停插件-->
 <script type="text/javascript" src="js/jquery.pause.min.js"></script>
-<!--滚动效果js-->
+<script type="text/javascript" src="js/script.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 
 </body>
