登录界面完成

--- a/products-list.html
+++ b/products-list.html
@@ -187,12 +187,7 @@
                 <div class="tab-bar">
                     <h4>排序: </h4>
                     <ul>
-                        <li class="active">网站推荐</li>
-                        <li>销量</li>
-                        <li>价格</li>
-                        <li>价格</li>
-                        <li>浏览量</li>
-                        <li>上架时间</li>
+                        <li class="active">网站推荐</li><li>销量</li><li>价格</li><li>价格</li><li>浏览量</li><li>上架时间</li>
                     </ul>
                     <div class="display-way">
                         <h4>显示方式: </h4>
